<resources>
    <string name="app_name">TMSAPP</string>
    <string name="app_logo_name">TMSAPP</string>

    <!-- Facebook App Id -->
    <!-- TODO(user:google): replace with your real server client ID -->
    <string name="facebook_app_id">443677466172520</string>
    <string name="fb_login_protocol_scheme">fb443677466172520</string>

    <!-- TODO(user:google): replace with your real server client ID -->
    <string name="server_client_id">750572001674-l08m6hl0d94f2nl1ukfmuj52pg8na2ge.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign IN</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or">or</string>
    <string name="forget_password"><u>forget password?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>


    <string name="my_account">My Account</string>
    <string name="incomplete_task">Incomplete Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="task_by_due_date">Task By Due Date</string>
    <string name="my_task">My Tasks</string>
    <string name="project_one">Ecommerce</string>
    <string name="project_two">Radiant GB</string>
    <string name="project_three">TMS</string>
    <string name="organization_one">Workspaceit</string>
    <string name="organization_two">Workspaceit Aus</string>

    <string name="sub_header_one">Favorites / Recent</string>
    <string name="sub_header_two">Organizations</string>

    <string name="inbox">Inbox</string>
    <string name="user_name">Sarwar Sikder</string>
    <string name="user_email">sarwar@workspaceit.com</string>
    <string name="my_image">my_image</string>


    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close Navigation drawer</string>


    <string name="saved_user_data"></string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="dob">Dob</string>
    <string name="todo">TODO</string>
    <string name="sub_header_three">Create Organization/Project</string>
    <string name="org_slug">Slug</string>
    <string name="save">save</string>
    <string name="create_organization_label">Create Organization</string>

    <string name="create_organization">Create Organization</string>
    <string name="create_project">Create Project</string>
    <string name="title_activity_test_home">TestHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_organization">OrganizationActivity</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="add_member">Add member</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="add_member_title">Add Member</string>
    <string name="logout">Logout</string>
    <string name="you_title">Title</string>
    <string name="task_date">task_date</string>
    <string name="fixed_header">Fixed Header</string>
    <string name="fixed_footer">Fixed Footer</string>
</resources>
